--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,15 @@
 steps:
-- name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
-timeout: "1600s"
+  # Step 1:
+  - name: 'gcr.io/cloud-builders/mvn'
+    entrypoint: bash
+    args: ['./scripts/build.bash']
+    volumes:
+      - name: 'jar'
+        path: /jar
+  # Step 2:
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: bash
+    args: ['./scripts/deploy.bash', '$_APP_NAME', '$_ENV_NAME', '$_REGION']
+    volumes:
+      - name: 'jar'
+        path: /jar
