--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,13 @@
 steps:
-  # Step 1:
-  - name: 'gcr.io/cloud-builders/mvn'
-    entrypoint: bash
-    args: ['./scripts/build.bash']
-    volumes:
-      - name: 'jar'
-        path: /jar
-  # Step 2:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: bash
-    args: ['./scripts/deploy.bash', '$_APP_NAME', '$_ENV_NAME', '$_REGION']
-    volumes:
-      - name: 'jar'
-        path: /jar
+# Install
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['install']
+# Test
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'test:unit']
+# Build
+- name: 'gcr.io/cloud-builders/npm'
+  args: ['run', 'build']
+# Deploy
+- name: 'gcr.io/$PROJECT_ID/firebase'
+  args: ['deploy']
