--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,5 +9,5 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['run', 'build']
 # Deploy
-- name: 'gcr.io/$PROJECT_ID/firebase'
+- name: 'gcr.io/my-springboot-app/firebase'
   args: ['deploy']
