--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 # Build
-- name: 'gcr.io/cloud-builders/npm'
+- name: 'gcr.io/cloud-builders/mvn'
   args: ['run', 'build']
 # Deploy
 - name: 'gcr.io/my-springboot-app/firebase'
