--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,14 +2,14 @@ steps:
   # Step 1:
   - name: 'gcr.io/cloud-builders/mvn'
     entrypoint: bash
-    args: ['/home/yogknerkar/build.bash']
+    args: ['/home/yogknerkar/spring-boot-app/build.bash']
     volumes:
       - name: 'jar'
         path: /jar
   # Step 2:
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: bash
-    args: ['/home/yogknerkar/deploy.bash', '$_APP_NAME', '$_ENV_NAME', '$_REGION']
+    args: ['/home/yogknerkar/spring-boot-app/deploy.bash', '$_APP_NAME', '$_ENV_NAME', '$_REGION']
     volumes:
       - name: 'jar'
         path: /jar
